# seo_audit_report_pipeline

./: .gitignore  LICENSE  README.md  all_sitemap_urls.txt  imagegroup_crawl.jl  package-lock.json  package.json  pyproject.toml  requirements.txt  seo_audit.code-workspace
.evidence/customization/: .profile.json
pages/: 1_serps.md  2_onpage.md  3_page_load_time.md  4_about_me.md  index.md
script/: get_new_emails.py  new_db_based_crawler_new.py  pagespeed_mobile_multithreaded.py
scripts/: advertools_parser.py  advertools_sitemap_crawler.py  crawler.py  get_new_emails.py  pagespeed_test.py
scripts/temp/: internal_html.csv  pagespeed_mobile_clarkfg.com.au.json  pagespeed_mobile_cmo.tommisaltiola.com.json  pagespeed_mobile_meettommisaltiolasolutions.biz.json  pagespeed_mobile_moreliving.com.au.json  pagespeed_mobile_tessellations.us.json  pagespeed_mobile_toaaccounting.co.nz.json  pagespeed_mobile_vividvista.tech.json  pagespeed_mobile_welho.com.json
sources/seo/: connection.yaml  internal_html_clean.sql  pagespeed_mobile.sql
