[tool.poetry]
name = "seo-audit-reports"
version = "0.1.0"
description = "Generates SEO audit reports"
authors = ["Tommi Saltiola <tommi@tommisaltiola.com>"]
license = "MIT"
readme = "README.md"
include = ["scripts/*"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.149.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pyarrow = "^17.0.0"
duckdb = "^1.1.1"
polars = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
